--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.3.1
 Django==3.1.4
 django-crispy-forms==1.7.2
-django-debug-toolbar==2.1
+django-debug-toolbar==3.2
+django-environ==0.4.5
+django-extensions==3.1.0
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
 PyJWT==2.0.0
