--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.1
 certifi==2020.12.5
 Django==3.1.4
+django-cors-headers==3.7.0
 django-crispy-forms==1.7.2
 django-debug-toolbar==3.2
 django-environ==0.4.5
